<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detalis">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:text="@string/pick"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/pickImage"
                android:layout_width="401dp"
                android:layout_height="54dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:src="@drawable/men">

             </de.hdodenhof.circleimageview.CircleImageView>

            <TextView
                android:text="@string/bd"
                android:textSize="20sp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>

            <TextView
                android:text="@string/description"
                android:textSize="20sp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>

            <TextView
                android:text="@string/bddescription"
                android:textSize="20sp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:gravity="clip_vertical"
                android:layout_height="wrap_content">

            </TextView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>